[workspace]

[package]
name = "overlay_grid"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Standalone overlay grid implementation using honeycomb crates"
repository = "https://github.com/your-org/overlay_grid"
readme = "README.md"

[dependencies]
honeycomb-core = "0.9.0"
honeycomb-kernels = "0.9.0"
honeycomb-render = "0.9.0"
thiserror = "1.0"
vtkio = "0.6"
morton-encoding = "2.0"
num-traits = "0.2"

[features]
default = []
